--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "prisma": "^5.21.1",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
